meja/tests/row-expression-unexpected-args.meja
let x : [< `A | `B | `C > `A] = `A(bool);
